--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.3
   kiwi: ^4.0.2
   smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
