--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,7 @@ linter:
   # producing the lint.
   rules:
      prefer_single_quotes: true
+     avoid_print: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
