download bar, download provider, added icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,3 +43,4 @@ flutter:
     - assets/images/categories/
     - assets/images/movies/
     - assets/images/my_list/
+    - assets/images/download_movies/
