--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,6 +24,7 @@ linter:
   rules:
      prefer_single_quotes: true
      avoid_print: false
+     always_use_package_imports: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
