--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   kiwi: ^4.0.2
   smooth_page_indicator: ^1.0.0+2
   share_plus: ^4.0.10
+  video_player: ^2.4.6
+  flick_video_player: ^0.5.0
 
 dev_dependencies:
   flutter_test:
