--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   video_player: ^2.4.6
   flick_video_player: ^0.5.0
   image_picker: ^0.8.5+3
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
