--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   video_player: ^2.4.6
   flick_video_player: ^0.5.0
   image_picker: ^0.8.5+3
+  #za linkove
   url_launcher: ^6.1.5
+  flutter_local_notifications: ^9.8.0+1
 
 dev_dependencies:
   flutter_test:
